Updated AdminBar CSS Styling and added navigation dropdown. Made admin sidebar disappear when window size is smaller than 1100px. Fixed sidebar suddenly cutting off at the when scrolling down.

--- a/src/main/react-frontend/src/pages/admin/ManageItemsPage.module.css
+++ b/src/main/react-frontend/src/pages/admin/ManageItemsPage.module.css
@@ -1,5 +1,19 @@
 .manageItems {
     background-color: white;
+    position: static;
+    right: 0rem;
+    top: 0rem;
+}
+
+@media screen and (min-width: 1400px) {
+    .manageItems {
+        background-color: white;
+        position: absolute;
+        right: 12rem;
+        top: 7rem;
+        margin-left:auto;
+        margin-right:auto;
+    }
 }
 
 .searchwrapper {
